# arch_dotfiles

./: .gitignore  README.md  font.md
alacritty/: alacritty.toml
bash/: .bashrc  .fzf.bash
btop/: btop.conf
emacs/: doom_install.md
fastfetch/: config.jsonc  switch.sh
ghostty/: config  config-dankcolors  config.md  config_default  fonts.md
git/: config
helix/: config.toml
ignis/: colors.scss  user_settings.json
kanata/: config_wip.kbd  config_wip2.kbd  kanata.kbd  test2.kbd  useful.md  wip.kbd
keyd/: default.conf  default1.conf  man.md
kitty/: colors.conf  kitty.conf  theme.conf  theme_switcher.sh  wip.conf
mango/: autostart.sh  binds.conf  config.conf  config.jsonc
matugen/: config.toml
niri/: actions.md  config.kdl
nvim/: .luarc.json  README.md  nvim_setup_final.sh  nvim_setup_wip.sh  switch_bak.sh
paru/: paru.conf
profile/: .profile
rofi/: colors.rasi  config.rasi
scripts/: app.md
sesh/: sesh.toml
ssh/: id_ed25519  id_ed25519.pub
starship/: starship.toml
surfingkeys/: .surfingkeys.js  01_settings.js  02_theme.js  03_search.js  04_mappings.js  05_sites.js  default_settings.md  guide.md  main.js
sway/: config
templates/python-automation/: README.md  main.py  pyproject.toml
templates/python-automation/scripts/: run.py
tmux/: cmds.md  gitmux.yml  keybindings.conf  keybinds.md  status_config_wip.conf  statusline.conf  theme.conf  tmux.conf  wip.conf
waybar/: colors.css  style.css
wezterm/: .luarc.json  wezterm.lua
wofi/: config
xremap/: config.yaml
zsh/: .fzf.zsh  .zcompdump  .zcompdump-arch-5.9  .zsh_history  (+4 more)
(+122 files in other folders)
