[project]
name = "automation-template"
version = "0.1.0"
description = "General-purpose Python automation project"
authors = [
    {name = "Nonoyanping",email = "snowman01956172@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ruff = "^0.11.4"
pytest = "^8.3.5"

